# rbn-vfd

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RbnVfdDisplay.sln  build.bat
.github/workflows/: ci.yml  release.yml
RbnVfdDisplay/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RbnVfdDisplay.csproj
RbnVfdDisplay/Models/: Spot.cs
RbnVfdDisplay/Properties/: AssemblyInfo.cs
RbnVfdDisplay/Services/: RbnTelnetClient.cs  SpotStore.cs  VfdDisplayService.cs
docs/: wo6w.txt  wo6w_linux.txt
docs/plans/: 2026-01-19-rust-linux-port-implementation.md  2026-01-19-spot-display-improvements-design.md  2026-01-19-spot-display-improvements.md  2026-01-21-omnirig-radio-control-design.md
rbn-vfd-linux/src/: app.rs  config.rs  main.rs
rbn-vfd-linux/src/models/: spot.rs
rbn-vfd-linux/src/services/: mod.rs  rbn_client.rs  vfd_display.rs
src/: app.rs  config.rs  main.rs
src/models/: mod.rs  spot.rs
src/services/: mod.rs  rbn_client.rs  spot_store.rs  vfd_display.rs
src/services/radio/: mod.rs  noop.rs  omnirig.rs  rigctld.rs
