[package]
name = "rbn-vfd"
version = "1.0.6"
edition = "2021"
description = "RBN VFD Spot Display"
license = "MIT"

[dependencies]
eframe = "0.31"
tokio = { version = "1", features = ["full"] }
serialport = "4.7"
configparser = "3"
directories = "5"
rand = "0.8"
regex = "1"

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.22", features = ["ole", "oleaut"] }
